# axon-protocol

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pay_invoice_agent.sh  test_agent.py
.github/workflows/: ci.yml
axon-cli/: Cargo.toml
axon-cli/src/: main.rs
axon-core/: Cargo.toml
axon-core/benches/: similarity.rs
axon-core/src/: constants.rs  errors.rs  handshake.rs  lib.rs  manifest.rs  settlement.rs  similarity.rs
axon-core/tests/: integration.rs
axon-daemon/: Cargo.toml  build.rs
axon-daemon/src/: config.rs  dht.rs  escrow_monitor.rs  grpc.rs  hnsw_index.rs  main.rs  p2p.rs  settlement_engine.rs  storage.rs
axon-sdk/: Cargo.toml  build.rs
axon-sdk/src/: discovery.rs  lib.rs  register.rs
contracts/axon/: Move.toml  Published.toml
contracts/axon/sources/: settlement.move
docker/: Dockerfile  docker-compose.yml
docs/: getting-started.md
proto/: axon_handshake.proto  axon_manifest.proto
scripts/: deploy_local.sh  dev_setup.sh
