[package]
name        = "axon"
description = "AXON CLI — register agents, query DHT, inspect sessions"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
axon-core  = { workspace = true }
axon-sdk   = { path = "../axon-sdk" }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
clap       = { workspace = true }
