[package]
name        = "axon-core"
description = "Core protocol types, handshake engine, and cryptographic primitives"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
blake3        = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
hex           = { workspace = true }
bytemuck      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "similarity"
harness = false
