[package]
name        = "axon-sdk"
description = "AXON developer SDK — one-call agent registration and session management"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
axon-core  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
rand       = { workspace = true }
ed25519-dalek = { workspace = true }

# gRPC
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"

